# Climber_slam_2026

./: .gitignore  121.pgm  121.yaml  2025new.pgm  2025new.yaml  3v3.sh  7v7 1.pgm  7v7 2.pgm  7v7.yaml  README.md  guli.pcd.rviz  guli.pgm  guli2.pgm  guli2.yaml  mapping.sh  nav.sh  {map_name}.pgm  {map_name}.yaml
src/ballistic_angle_solver/: CMakeLists.txt  package.xml
src/ballistic_angle_solver/launch/: ballistic_angle_solver.launch.py
src/ballistic_angle_solver/src/: ballistic_angle_node.cpp  robot_pose_echo_node.cpp
src/keyboard_nav_goal_sender/: CMakeLists.txt  package.xml
src/keyboard_nav_goal_sender/src/: keyboard_nav_goal_sender_node.cpp
src/rm_bringup/: package.xml
src/rm_bringup/launch/: bringup.launch.py
src/rm_communication/: CMakeLists.txt  package.xml
src/rm_communication/action/: NavigateToPose.action
src/rm_communication/src/: lis.cpp  monitor.cpp  sub_from_nav.cpp  talker.cpp  talker_seven.cpp  talker_three.cpp
src/rm_localization/fast_lio/: CMakeLists.txt
src/rm_localization/fast_lio/config/: mid360.yaml
src/rm_localization/icp_localization_ros2/config/: node_params.yaml
src/rm_localization/icp_registration/config/: icp.yaml
src/rm_nav_bringup/PCD/: guli.pcd
src/rm_nav_bringup/config/reality/: fastlio_mid360_real.yaml  icp_registration_real.yaml  nav2_params_real.yaml
src/rm_nav_bringup/config/simulation/: nav2_params_sim.yaml
src/rm_nav_bringup/launch/: bringup_sim.launch.py
src/rm_nav_bringup/map/: guli.yaml
src/rm_navigation/launch/: bringup_launch.py  climber_bringup_launch.py
src/rm_navigation/map/: 2025new1.pgm  keepout_mask.pgm
src/rm_navigation/params/: nav2_params.yaml  nav2_params_real.yaml
src/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
src/rm_perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/rm_robot_description/urdf/: sentry.urdf.xacro
src/rm_sensors/livox_ros_driver2/config/: MID360_config.json
